container class was nested inside container-fluid class in less file which was causing layout issues so un-nested to resolve

--- a/css/index.css
+++ b/css/index.css
@@ -8252,6 +8252,6 @@ h5 {
 .container-fluid {
   background-color: #e0e0e0;
 }
-.container-fluid .container {
+.container {
   max-width: 800px;
 }
